fix panel before gap on mobile view

--- a/src/styles/_top-panel.scss
+++ b/src/styles/_top-panel.scss
@@ -33,7 +33,7 @@
       bottom: 0;
       left: 0;
       height: 50px;
-      width: 30px;
+      width: 31px;
       border-top-left-radius: 12px;
       box-shadow: -20px -40px 0px 0 white;
       z-index: 99;
@@ -60,7 +60,7 @@
       bottom: 40px;
       right: 0px;
       height: 50px;
-      width: 30px;
+      width: 31px;
       border-bottom-right-radius: 12px;
       box-shadow: 20px 40px 0px 0 white;
       z-index: 99;
